--- a/src/main/resources/templates/enrollees.html
+++ b/src/main/resources/templates/enrollees.html
@@ -13,7 +13,7 @@
 
 <ul  th:each="enrollee : ${enrollees}">
     <li>
-        <a th:text="${enrollee.id} + ' ' + ${enrollee.fullName}"
+        <a th:text="${enrollee.id + 1} + ' ' + ${enrollee.fullName}"
            th:href="@{/enrollee/{id}(id=${enrollee.getId()})}">
             enrollee name </a>
         <a th:href="@{/exam{id}(id=${enrollee.getId()})}">
